create menu factory to easily create menus, move menu_screen to use that, create pause menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "${addons}/lovr/module/library"
     ],
     "Lua.runtime.version": "LuaJIT",
-    "Lua.workspace.checkThirdParty": false
+    "Lua.workspace.checkThirdParty": false,
+    "cSpell.words": [
+        "enet"
+    ]
 }
